<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundback"
    tools:context=".QuizResults">

    <ImageView
        android:id="@+id/winer"
        android:layout_width="329dp"
        android:layout_height="278dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/winer"/>

    <TextView
        android:id="@+id/winertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:layout_below="@+id/winer"
        android:text="@string/rezult"
        android:textColor="#FFFFFF "
        android:textStyle="bold"
        android:textSize="35sp"/>
    <LinearLayout
        android:layout_below="@+id/winertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/correctAnswers"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:textSize="19sp"
            android:layout_height="wrap_content"
            android:text="@string/rezult_1"
            android:textStyle="bold"
            android:textColor="#00C855"
            />
        <TextView
            android:id="@+id/incorrectAnswers"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:textSize="19sp"
            android:layout_height="wrap_content"
            android:text="@string/rezult_2"
            android:textStyle="bold"
            android:textColor="#FF1E0E"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startNewQuizBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/New_Quiz"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@drawable/round_back_green20"
        />
</RelativeLayout>