<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/roundback"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="40dp"
        android:text="DressQuiz"
        android:shadowRadius="10"
        android:shadowColor="#630808"
        android:textColor="#E85A5A"
        android:textStyle="bold"
        android:textSize="55sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gradient"
        android:text="@string/Choose_quiz_2"
        android:shadowColor="#00FF00"
        android:shadowRadius="6"
        android:textColor="@color/black"
        android:textSize="27dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medium"
        android:orientation="horizontal"
        android:layout_marginTop="225dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="10dp"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/medium"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_white10"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="17dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:src="@drawable/sport_1"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/Choose_quiz_easy"
                android:textColor="#CC000000"
                android:shadowColor="#00FF00"
                android:shadowRadius="6"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/easy"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_white10"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="17dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:src="@drawable/sport_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/Choose_quiz_normal"
                android:textColor="#CC000000"
                android:shadowColor="#00FF00"
                android:shadowRadius="6"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_1"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="10dp"
        android:weightSum="1">

        <LinearLayout
        android:id="@+id/hard"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="@drawable/round_back_white10"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="17dp">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:src="@drawable/sport_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/Choose_quiz_hard"
            android:textColor="#CC000000"
            android:shadowColor="#00FF00"
            android:shadowRadius="6"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/hardcore"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_white10"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="17dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:src="@drawable/sport_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:shadowColor="#00FF00"
                android:shadowRadius="6"
                android:text="@string/Choose_quiz_hardcore"
                android:textColor="#CC000000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/StartQuizBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Choose_quiz"
        android:layout_below="@+id/line_2"
        android:layout_marginTop="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/round_back_green20"
        />

</RelativeLayout>